components/Projects/Project/Project.module.scss
@import '../../../styles/mixins';
.project {
    --min: var(--size-15);
    --column-gap: var(--size-8);
    --row-gap: var(--size-10);
    display: grid;
    column-gap: var(--column-gap);
    row-gap: var(--row-gap);
    grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--min)), 1fr));
    position: relative;

    @include device-down(desktop) {
        flex-direction: column;
        flex-flow: column;
        --row-gap: var(--size-7);
    }

    &.animate {
        --_opacity: 1;
    }

    &:nth-of-type(even) {
        @include device-up(desktop) {
            --_position: 1;
        }
    }

    .pictures,
    .description {
        opacity: var(--_opacity, 0);
        transition: opacity 0.8s cubic-bezier(0, -0.01, 0, 0.6);
    }

    .pictures {
        position: relative;

        img {
            object-fit: cover;
            object-position: center;
            aspect-ratio: 16/9;
            max-width: 70rem;
            width: 100%;
            border-radius: calc(var(--border-radius) * 2);
        }
    }

    .description {
        grid-column: var(--_position, unset);
        grid-row: var(--_position, unset);
        p {
            max-width: 60ch;
        }
        ul {
            display: grid;
            gap: var(--size-2);
        }
        li {
            display: grid;
            gap: var(--size-3);
            grid-template-columns: 1rem 1fr;
            align-items: flex-start;

            &::marker {
                content: none;
            }

            &::before {
                content: '';
                background: var(--linear-gradient-2) fixed;
                width: 100%;
                height: 0.5rem;
                position: relative;
                top: 1rem;
                border-radius: 2px;

                @supports (-moz-appearance: none) {
                    background: var(--highlight);
                }
            }
        }
    }

    .tags {
        display: flex;
        flex-wrap: wrap;
        column-gap: var(--size-3);
        row-gap: var(--size-1);

        @media (max-width: 598px) {
            margin-bottom: var(--size-2);
        }

        span {
            font-size: var(--font-size-1);
            background: var(--linear-gradient-2) fixed;
            -webkit-background-clip: text;
            -webkit-text-fill-color: transparent;

            @supports (-moz-appearance: none) {
                background: var(--linear-gradient-1);
                -webkit-background-clip: text;
                -webkit-text-fill-color: transparent;
            }
        }
    }

    .button {
        display: flex;
        gap: var(--size-6);
        margin-top: var(--size-6);

        @include device-down(mobile) {
            flex-direction: column;
        }
    }
}

